fix / homeapage » topic list spacing

--- a/public/css/views/home.less
+++ b/public/css/views/home.less
@@ -144,7 +144,7 @@
   }
 
   .categories_link-wrapper {
-    padding-top: 35px;
+    padding-top: 10px;
   }
 
   .categories_title {
